API splitted for gRPC backend access
