# entry/docs/swagger.json
@@ -14,9 +14,43 @@
     },
     "basePath": "/",
     "paths": {
-        "/": {
+        "/grpc": {
             "get": {
-                "description": "return simple greeting",
+                "description": "return simple greeting via gRPC backend API",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "hello"
+                ],
+                "summary": "greeting",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT access token",
+                        "name": "X-Token",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/rest": {
+            "get": {
+                "description": "return simple greeting via RESTfull backend API",
                 "produces": [
                     "text/plain"
                 ],
